# projektowanie-aplikacji-internetowych

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0e76f214f275_initial_user_and_organization.py  8a2f1c4b9e30_add_resource.py  c1d4e7a92b58_add_booking_with_gist_exclude.py
app/: cache.py  config.py  logging_config.py  main.py  seed.py
app/api/: auth.py  bookings.py  deps.py  health.py  resources.py
app/auth/: cookies.py  passwords.py  tokens.py
app/models/: __init__.py  base.py  booking.py  organization.py  resource.py  user.py
app/schemas/: auth.py  booking.py  resource.py
app/tasks/: celery_app.py
app/templates/: _health_card.html  base.html  bookings_list.html  calendar.html  index.html  login.html  register.html  resources_list.html
app/web/: pages.py
docs/adr/: 0001-fastapi-as-backend-framework.md  0002-postgres-sqlalchemy-alembic.md  0003-htmx-jinja-zamiast-spa.md  0004-race-conditions-exclude-using-gist.md  0005-jwt-cookie-auth.md  0006-multi-tenancy-shared-schema.md  0007-celery-redis-task-queue.md  0008-redis-cache-availability.md  README.md
tests/: conftest.py  test_race_condition.py  test_smoke.py
