[project]
name = "booking-system"
version = "0.1.0"
description = "System rezerwacji zasobów — PAI projekt zaliczeniowy"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "celery>=5.4",
    "redis>=5.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "httpx>=0.28",
    "structlog>=24.4",
    # auth (day 2)
    "passlib[bcrypt]>=1.7",
    "pyjwt>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
